# emd-desafio-devops

./: .env  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  app.py  docker-compose.yaml  index.html  mkdocs.yml  pyproject.toml  settings.py  setup.cfg  sitemap.xml
.github/workflows/: gcp-deploy-pr.yaml  gcp-deploy.yaml  lint.yaml  semgrep.yaml  tag.yaml  test.yaml
docs/: _config.yml  index.md
docs/_posts/: 2023-07-26-welcome-to-jekyll.markdown
search/: search_index.json
src/: __init__.py  app.py  settings.py
test/: conftest.py  test_factory.py
