[tool.poetry]
name = "emd-desafio-devops"
version = "0.1.0"
description = ""
authors = ["Thiago Felipe <thiago.felipe@tutanota.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
coverage = "^7.2.7"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
semgrep = "^1.33.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
